[MODFEE-86] Fixed logic and tests